
  - spot::cleanup_parity() and spot::cleanup_parity_here() are smarter
    and now remove from the acceptance condition the parity colors
    that are not used in the automaton.

  - spot::contains() and spot::are_equivalent() can be used to
    check language containement between two automata or formulas.
    They are most welcome in Python, since we used to redefine
    them every now and them.

  - spot::remove_alternation() was slightly improved on very-weak
    alternating automata: the labeling of the outgoing transitions in
    the resulting TGBA makes it more likely that simulation-based
    reductions will reduce it.

  - When applied to automata that are not WDBA-realizable,
    spot::minimize_wdba() was changed to produce an automaton
    recognizing a language that includes the original one.  As a
    consequence spot::minimize_obligation() and
    spot::is_wdba_realizable() now only need one containement check
    instead of two.

  - Slightly improved log output for the SAT-based minimization
    functions.  The CSV log files now include an additional column
    with the size of the reference automaton, and they now have a
    header line.  These log files give more details and are more
    accurate in the case of incremental SAT-solving.

  Python:

  - New spot.jupyter package.  This currently contains a function for
    displaying several arguments side by side in a Jupyter notebook.
    See https://spot.lrde.epita.fr/ipynb/alternation.html for some
    examples.

  - Strings are now implicitely converted into formulas when passed
    as arguments to functions that expect formulas.  Previously this
    was done only for a few functions.

  - The Python bindings for sat_minimize() now have display_log and
    return_log options; these are demonstrated on the new
    https://spot.lrde.epita.fr/ipynb/satmin.html page.

  Bugs fixed:

  - Python *.py and *.so files are now always installed into the same